# ginkgo

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/ginkgo-analyze/: CMakeLists.txt  main.cpp
apps/ginkgo-consume/: CMakeLists.txt  main.cpp
apps/ginkgo-evaluate/: CMakeLists.txt  main.cpp
apps/ginkgo-produce/: CMakeLists.txt  main.cpp
cmake/modules/: FindClingo.cmake
include/ginkgo/: FeedbackLoopAnalysis.h  FeedbackLoopConsumption.h  FeedbackLoopEvaluation.h  FeedbackLoopProduction.h
include/ginkgo/feedback-loop/analysis/: Analysis.h  ConsumptionAnalysis.h  ProductionAnalysis.h
include/ginkgo/feedback-loop/consumption/: BenchmarkEnvironment.h  BenchmarkRunner.h  FeedbackType.h
include/ginkgo/feedback-loop/evaluation/: ComparisonPanel.h  EvaluationWindow.h
include/ginkgo/feedback-loop/production/: ClaspConstraintLogger.h  Configuration.h  Environment.h  EventCandidateTested.h  EventConstraintLearned.h  EventConstraintsRemoved.h  EventFeedbackExtracted.h  EventFinished.h  EventHypothesisTested.h  EventMinimized.h  Events.h  FeedbackLoop.h  FluentClosureUsage.h  LogLevel.h  Minimization.h  MinimizationStrategy.h  PartialPrograms.h  ProofInductive.h  ProofMethod.h  ProofResult.h  ProofStateWise.h  ProofType.h  TestingPolicy.h
include/ginkgo/gtk-widgets/: BarChartWidget.h  BarWidget.h  GridWidget.h  InfoWidget.h  PieChartWidget.h  ReflowBox.h  Style.h  TextBox.h
include/ginkgo/solving/: AsyncProcess.h  Clasp.h  ClaspOutputParsing.h  Constraint.h  Constraints.h  GeneralizedConstraint.h  Gringo.h  GroundConstraint.h  Literal.h  Process.h  Satisfiability.h  Symbol.h  SymbolTable.h  __deprecated__Constraint.h  __deprecated__Constraints.h  __deprecated__GeneralizedConstraint.h  __deprecated__Literal.h  __deprecated__SymbolTable.h
include/ginkgo/utils/: Range.h  Semaphore.h  Statistics.h  TextFile.h  Utils.h
src/: CMakeLists.txt
src/ginkgo/feedback-loop/analysis/: Analysis.cpp  ConsumptionAnalysis.cpp  ProductionAnalysis.cpp
src/ginkgo/feedback-loop/consumption/: BenchmarkEnvironment.cpp  BenchmarkRunner.cpp  FeedbackType.cpp
src/ginkgo/feedback-loop/evaluation/: ComparisonPanel.cpp  EvaluationWindow.cpp
src/ginkgo/feedback-loop/production/: ClaspConstraintLogger.cpp  Configuration.cpp  Environment.cpp  EventCandidateTested.cpp  EventConstraintLearned.cpp  EventConstraintsRemoved.cpp  EventFeedbackExtracted.cpp  EventFinished.cpp  EventHypothesisTested.cpp  EventMinimized.cpp  Events.cpp  FeedbackLoop.cpp  FluentClosureUsage.cpp  LogLevel.cpp  Minimization.cpp  MinimizationStrategy.cpp  ProofInductive.cpp  ProofMethod.cpp  ProofResult.cpp  ProofStateWise.cpp  ProofType.cpp  TestingPolicy.cpp
src/ginkgo/gtk-widgets/: BarChartWidget.cpp  BarWidget.cpp  GridWidget.cpp  InfoWidget.cpp  PieChartWidget.cpp  ReflowBox.cpp  Style.cpp  TextBox.cpp
src/ginkgo/solving/: AsyncProcess.cpp  Clasp.cpp  ClaspOutputParsing.cpp  Constraint.cpp  Constraints.cpp  GeneralizedConstraint.cpp  Gringo.cpp  GroundConstraint.cpp  Literal.cpp  Process.cpp  Satisfiability.cpp  SymbolTable.cpp  __deprecated__Constraint.cpp  __deprecated__Constraints.cpp  __deprecated__GeneralizedConstraint.cpp  __deprecated__Literal.cpp  __deprecated__SymbolTable.cpp
src/ginkgo/utils/: Semaphore.cpp  TextFile.cpp  Utils.cpp
tests/: CMakeLists.txt  TestConstraints.cpp  TestIntegrityConstraints.cpp
